adding total values in viev page

--- a/view.html
+++ b/view.html
@@ -77,6 +77,9 @@
                     <thead id ="header1"> </thead>
                     <tbody id ="table1"></tbody>                
                 </table>
+                <div> Total Assets:</div> <div id = 'apiTotal'></div>
+                <div> Invested Capital:</div> <div id = 'apiInvested'></div>
+                <div> Gain / Loss:</div> <div id = 'percentage'></div>
            <script src="scripts/table1.js"> </script> 
            
 
